# bballhead_cp

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/bballhead_cp/: __init__.py  bballhead_cp.py
tests/: test_bballhead_cp.py
